Fixed lineheight on mobile

--- a/assets/web/scss/eer-web.scss
+++ b/assets/web/scss/eer-web.scss
@@ -380,11 +380,13 @@
       .eer-row.eer-form-checkbox {
         .eer-form-group {
           label {
-            height: 40px;
+            min-height: 40px;
             text-align: left;
             padding-left: 50px;
             font-size: 16px;
-            line-height: 40px;
+            line-height: 20px;
+            vertical-align: middle;
+            padding-top: 5px;
           }
         }
       }
